--- a/cghousing/templates/coop/base.html
+++ b/cghousing/templates/coop/base.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="{% static "coop/css/reset.css" %}" />
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static "coop/css/base.css" %}" />
+    <link rel='shortcut icon' href="{% static "coop/images/logo-196.png" %}"
+        type='image/x-icon' />
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
     <title>{% block title %}{{ app_settings.coop_name }}{% endblock %}</title>
 </head>
