--- a/cghousing/templates/coop/base.html
+++ b/cghousing/templates/coop/base.html
@@ -128,6 +128,16 @@
         </div>
     </div>
 
+    <script type="text/javascript">
+        console.log('hi from js');
+        $(function () {
+            // When the page has finished loading,
+            // autofocus on the username field
+            $('input[type=text]').first().focus();
+        });
+    </script>
+
 </body>
+
 </html>
 
