--- a/cghousing/templates/coop/login.html
+++ b/cghousing/templates/coop/login.html
@@ -26,6 +26,14 @@
 
         {% csrf_token %}
 
+        {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li class="error">{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+
         <div class="form-row">
             <label for="username" class="required">Username:</label>
             <input id="username" maxlength="254" name="username" type="text">
