--- a/cghousing/templates/coop/thread_new.html
+++ b/cghousing/templates/coop/thread_new.html
@@ -2,20 +2,24 @@
 
 {% load humanize %}
 
-{% block body_class %}class="forum_new"{% endblock %}
+{% block body_class %}class="thread_new"{% endblock %}
 
 {% block breadcrumbs %}
   <a href="{% url 'coop:forums' %}">Forums</a>
   &gt;
-  <a href="{% url 'coop:forum_new' %}">new</a>
+  <a href="{% url 'coop:forum' pk=forum.id %}"
+     >{{forum.name}}</a>
+  &gt;
+  <a href="{% url 'coop:thread_new' url_name=forum.url_name %}">new</a>
 {% endblock %}
 
 {% block content %}
-  <h1>Create a new Forum</h1>
+  <h1>Create a new Thread</h1>
 
   {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
-  <form action="{% url 'coop:forum_save' %}" method="post" class="default-form">
+  <form action="{% url 'coop:thread_save' url_name=forum.url_name %}"
+    method="post" class="default-form">
     {% csrf_token %}
     {{ form.as_ul }}
     <input type="submit" value="Create" />
@@ -24,3 +28,4 @@
 {% endblock %}
 
 {% block rightbar %}{% endblock %}
+
